# viewport

./: .gitignore  ci.dockerfile  mypy.ini  package.json  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml  ci.yml.disabled  lint.yml  lint.yml.disabled  test.yml  test.yml.disabled
client/: package.json  tsconfig.json
client/src/: index.ts  sync.ts  types.ts  viewport.ts
client/src/compiler/threejs/: index.ts
client/src/parser/threejs/: index.ts
client/src/sensors/: contact.ts  directions.ts  index.ts  lidar.ts
client/src/viewer/: builder.ts  scene.ts  types.ts
examples/: basic_shapes.py  genesis_browser_franka.py  genesis_rerun.py  genesis_rerun_franka.py  newton_basic.py  pendulum.py  rerun_stacking.py  stacking.py  wasm_pendulum.py  wasm_stacking.py
examples/scenes/: basic_shapes.xml  stacking.xml
headless/: Cargo.toml
headless/src/: camera.rs  main.rs  primitive.rs  renderer.rs  shader.wgsl  types.rs
preview/: index.html  package.json  tsconfig.json  vite.config.ts
preview/public/scene/cloi_porter/: cloi_porter.xml  manifest.json
preview/public/scene/g1/: g1.controller.json  g1.xml  manifest.json
preview/public/scene/go1/: go1.controller.json
preview/public/scene/go2/: go2.xml  manifest.json
preview/public/scene/pickandplace/: combined.xml  env.json  env.xml  manifest.json  pick_place_scene.xml  rethink_mount_scaled.xml  robot.xml  scene.xml  test-simple.xml
preview/public/scene/pickcube/: dishwasher.xml  manifest.json  panda.xml  scene.json
preview/public/scene/so100/: manifest.json  scene.json
preview/public/scene/test/: dishwasher.scene.json  g1.scene.json  go1.scene.json  go2.scene.json  multi.scene.json  panda.scene.json  pickplace.scene.json  scene.json  simpletable.scene.json  so100.scene.json
preview/public/scene/ycb/: banana.scene.json  plate.scene.json
preview/src/: main.ts  style.css  tree.ts
server/: .gitignore  ci.dockerfile  mypy.ini  pyproject.toml
server/examples/: basic_shapes.py  genesis_browser_franka.py  newton_browser.py  pendulum.py  stacking.py  wasm_pendulum.py
server/examples/scenes/: pendulum.xml
server/src/viewport/genesis/: __init__.py  extract.py  glb.py  scene.py
server/src/viewport/mujoco/: __init__.py  codec.py  glb.py  scene.py  wasm.py
server/src/viewport/rerun/: logger.py
src/viewport/: __init__.py  test_smoke.py
src/viewport/genesis/: __init__.py  extract.py  glb.py
src/viewport/mujoco/: __init__.py  geom.py  glb.py  scene.py  wasm.py
src/viewport/rerun/: __init__.py  logger.py
src/viewport/visualizer/: __init__.py  server.py  visualizer.py
(+15 files in other folders)
