[project]
name = "viewport"
version = "0.0.0"
description = "Stream simulation meshes and state to browser viewers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.4.0",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "trimesh>=4.11.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
visualizer = [
    "starlette>=0.45.0",
    "uvicorn>=0.34.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewport"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
