[project]
name = "viewport"
version = "0.0.0"
description = "Stream simulation meshes and state to browser viewers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.24.0,<2.4", "trimesh>=4.11.1"]

[project.optional-dependencies]
dev = ["mypy>=1.19.1", "pytest>=9.0.2", "ruff>=0.15.0"]
visualizer = ["starlette>=0.45.0", "uvicorn>=0.34.0", "websockets>=16.0"]
rerun = ["rerun-sdk>=0.29.1"]

[dependency-groups]
mujoco = ["mujoco>=3.2.5", "pillow>=11.0"]
genesis = ["genesis-world", "mujoco>=3.2.5", "pillow>11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewport"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.uv]
override-dependencies = ["numba>=0.60"]

[tool.uv.sources]
genesis-world = { git = "https://github.com/Genesis-Embodied-AI/Genesis", rev = "5a8928a5e1b3d9e668bb2381ded44ef64357afb2" }
